--- a/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.css
+++ b/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.css
@@ -30,3 +30,9 @@
   margin-right: 8px;
   font-size: 16px;
 }
+
+.operation .disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.5
+}
