--- a/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
@@ -1,9 +1,9 @@
-<form [formGroup]="mainForm" class="main-form" [style.display]="edit?'none':'block'">
+<form [formGroup]="mainForm" class="main-form" [style.display]="isEdit?'none':'block'">
   <nz-spin nzSize="small" [nzSpinning]="isSpinning"></nz-spin>
   <div nz-row>
     <div nz-col nzSpan="8">
       <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6">Id</nz-form-label>
+        <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
         <nz-form-control nzSpan="18">
           <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
         </nz-form-control>
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="operation">
-    <a (click)="edit=true">
+    <a (click)="edit()">
       <i nz-icon type="edit" theme="twotone"></i>
     </a>
     <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete()">
@@ -64,7 +64,7 @@
   </div>
 </form>
 
-<form [formGroup]="mainForm" (ngSubmit)="submit()" class="main-form" [style.display]="edit?'block':'none'">
+<form [formGroup]="mainForm" (ngSubmit)="submit()" class="main-form" [style.display]="isEdit?'block':'none'">
   <div nz-row>
     <div nz-col nzSpan="8">
       <nz-form-item nzFlex>
@@ -79,6 +79,11 @@
         <nz-form-label nzSpan="6" nzFor="value" nzRequired>Value</nz-form-label>
         <nz-form-control nzSpan="18">
           <input nz-input id="value" placeholder="Value" formControlName="value">
+          <nz-form-explain *ngIf="mainForm.get('value').dirty && mainForm.get('value').errors">
+            <ng-container *ngIf="mainForm.get('value').hasError('required')">
+              请输入Value
+            </ng-container>
+          </nz-form-explain>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -87,6 +92,11 @@
         <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
         <nz-form-control nzSpan="18">
           <input nz-input id="type" placeholder="Type" formControlName="type">
+          <nz-form-explain *ngIf="mainForm.get('type').dirty && mainForm.get('type').errors">
+            <ng-container *ngIf="mainForm.get('type').hasError('required')">
+              请输入Type
+            </ng-container>
+          </nz-form-explain>
         </nz-form-control>
       </nz-form-item>
     </div>
@@ -112,13 +122,13 @@
       <nz-form-item nzFlex>
         <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
         <nz-form-control nzSpan="18">
-          <nz-form-text>{{mainForm.get('created').value | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
+          <nz-form-text>{{mainForm.get('created')?.value | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
         </nz-form-control>
       </nz-form-item>
     </div>
   </div>
   <div class="operation">
-    <a (click)="submit()">
+    <a (click)="submit()" [ngClass]="{'disabled': !mainForm.valid}">
       <i nz-icon type="check-circle" theme="twotone"></i>
     </a>
     <a (click)="cancel()">
