--- a/Demo4Angular/src/app/authority/api-resource/api-scope/api-scope.component.css
+++ b/Demo4Angular/src/app/authority/api-resource/api-scope/api-scope.component.css
@@ -27,3 +27,9 @@
   margin-right: 8px;
   font-size: 16px;
 }
+
+.operation .disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.5
+}
