--- a/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-secret/api-secret.component.html
@@ -68,7 +68,7 @@
   <div nz-row>
     <div nz-col nzSpan="8">
       <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6">Id</nz-form-label>
+        <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
         <nz-form-control nzSpan="18">
           <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
         </nz-form-control>
