--- a/Demo4Angular/src/app/home/default/default.component.html
+++ b/Demo4Angular/src/app/home/default/default.component.html
@@ -11,7 +11,7 @@
           <li nz-menu-item [routerLink]="['/Authority','IdentityResources']">Identity Resources</li>
           <li nz-menu-item [routerLink]="['/Authority','Clients']">Clients</li>
           <li nz-menu-item [routerLink]="['/Authority','Users']">Users</li>
-          <li nz-menu-item [routerLink]="['/Sample']">Sample</li>
+          <li nz-menu-item [routerLink]="['/Sample/root']">Sample</li>
         </ul>
       </li>
       <li nz-submenu [(nzOpen)]="openMap.user" (nzOpenChange)="openHandler('user')">
