--- a/Demo4Angular/src/app/sample/sample-root/sample-root.component.html
+++ b/Demo4Angular/src/app/sample/sample-root/sample-root.component.html
@@ -10,8 +10,8 @@
 <a [routerLink]="['B']">
   <i nz-icon type="plus-circle" theme="twotone" twoToneColor="#52c41a"></i>sample-b
 </a>
-<a [routerLink]="['/Sample/A']">
-  sample-a
+<a [routerLink]="['/Sample/root/A']">
+  sample-root-a
 </a>
 <p>flex row</p>
 <div nz-row nzType="flex" nzJustify="start" nzGutter="16">
