--- a/Demo4Angular/src/app/authority/api-resource/api-resource.component.html
+++ b/Demo4Angular/src/app/authority/api-resource/api-resource.component.html
@@ -32,7 +32,7 @@
   </nz-form-item>
   <nz-form-item class="add-new-container">
     <nz-form-control>
-      <a class="add-new" [routerLink]="['../ApiResources','']">
+      <a class="add-new" [routerLink]="['./','']">
         <i nz-icon type="plus-circle" theme="twotone" twoToneColor="#52c41a"></i>
       </a>
     </nz-form-control>
@@ -79,7 +79,7 @@
         <!-- <a [routerLink]="['../ApiResources',item.id]">
           <i nz-icon type="edit" theme="twotone"></i>
         </a> -->
-        <a (click)=navigate(item.id)>
+        <a (click)="navigate(item.id)">
           <i nz-icon type="edit" theme="twotone"></i>
         </a>
         <a (click)="delete(item.id)">
