--- a/Demo4Angular/src/app/home/default/default.component.html
+++ b/Demo4Angular/src/app/home/default/default.component.html
@@ -5,7 +5,7 @@
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
       <li nz-submenu [(nzOpen)]="openMap.authority" (nzOpenChange)="openHandler('authority')">
-        <span title><i nz-icon type="user"></i><span class="nav-text">Authority</span></span>
+        <span title><i nz-icon type="team"></i><span class="nav-text">Authority</span></span>
         <ul>
           <li nz-menu-item [routerLink]="['/Authority','ApiResources']">Api Resources</li>
           <li nz-menu-item [routerLink]="['/Authority','IdentityResources']">Identity Resources</li>
@@ -15,10 +15,10 @@
         </ul>
       </li>
       <li nz-submenu [(nzOpen)]="openMap.user" (nzOpenChange)="openHandler('user')">
-        <span title><i nz-icon type="team"></i><span class="nav-text">Users</span></span>
+        <span title><i nz-icon type="user"></i><span class="nav-text">Login</span></span>
         <ul>
-          <li nz-menu-item>Team 1</li>
-          <li nz-menu-item>Team 2</li>
+          <li nz-menu-item [routerLink]="['/Identity','Implicit']">Implicit</li>
+          <li nz-menu-item [routerLink]="['/Identity','ResourceOwner']">Resource Owner</li>
         </ul>
       </li>
       <li nz-menu-item><span><i nz-icon type="file"></i><span class="nav-text">File</span></span></li>
