--- a/Demo4Angular/src/app/identity/resource-owner-login/resource-owner-login.component.html
+++ b/Demo4Angular/src/app/identity/resource-owner-login/resource-owner-login.component.html
@@ -1,2 +1,8 @@
+<h1 *ngIf="id">
+    {{id}}
+  </h1>
+  <h1 *ngIf="name">
+    {{name}}
+  </h1>
 <button nz-button nzType="default" (click)="login()">login</button>
 <button nz-button nzType="default" (click)="refresh()">refresh</button>
