--- a/Demo4Angular/src/app/identity/api-resource/api-scope/api-scope.component.css
+++ b/Demo4Angular/src/app/identity/api-resource/api-scope/api-scope.component.css
@@ -33,3 +33,21 @@
   cursor: default;
   opacity: 0.5
 }
+
+.empty-subitem {
+  display: flex;
+  justify-content: center;
+  height: auto;
+  background: #fbfbfb;
+  border: 1px solid #d9d9d9;
+  border-radius: 6px;
+  transition: all .3s;
+}
+
+.empty-subitem:hover {
+  border: 1px solid #1890ff;
+}
+
+.user-claims button{
+  margin-left:8px;
+}
