--- a/Demo4Angular/src/app/identity/resource-owner-login/resource-owner-login.component.html
+++ b/Demo4Angular/src/app/identity/resource-owner-login/resource-owner-login.component.html
@@ -1,8 +1,15 @@
+<h1 *ngIf="!name">
+  Hallo
+</h1>
+<h1 *ngIf="name">
+  Hallo, {{name}}
+</h1>
 <h1 *ngIf="id">
-    {{id}}
-  </h1>
-  <h1 *ngIf="name">
-    {{name}}
-  </h1>
+  ID:{{id}}
+</h1>
 <button nz-button nzType="default" (click)="login()">login</button>
+<button nz-button nzType="default" (click)="logout()">logout</button>
 <button nz-button nzType="default" (click)="refresh()">refresh</button>
+<div>
+  Username/Passwort admin/LO3tGX&6
+</div>
