--- a/Demo4Angular/src/app/identity/api-resource/api-scope/api-scope.component.html
+++ b/Demo4Angular/src/app/identity/api-resource/api-scope/api-scope.component.html
@@ -1,178 +1,198 @@
-<form [formGroup]="mainForm" class="main-form" [style.display]="isEdit?'none':'block'">
+<form [formGroup]="mainForm" class="main-form">
   <nz-spin nzSize="small" [nzSpinning]="isSpinning"></nz-spin>
-  <div nz-row>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="id" nzRequired>Id</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
+  <ng-container *ngIf="!isEdit">
+    <div nz-row>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="id" nzRequired>Id</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="name" nzRequired>Name</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text> {{mainForm.get('name').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="displayName">DisplayName</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text> {{mainForm.get('displayName').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
     </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="name" nzRequired>Name</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text> {{mainForm.get('name').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
+    <div nz-row>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text> {{mainForm.get('description').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-control nzSpan="18" nzPush="6">
+            <label nz-checkbox name="required" formControlName="required" nzDisabled>Required</label>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-control nzSpan="18" nzPush="6">
+            <label nz-checkbox name="Emphasize" formControlName="emphasize" nzDisabled>Emphasize</label>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-control nzSpan="18" nzPush="6">
+            <label nz-checkbox name="showInDiscoveryDocument" formControlName="showInDiscoveryDocument" nzDisabled>ShowInDiscoveryDocument</label>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
     </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="displayName">DisplayName</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text> {{mainForm.get('displayName').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text> {{mainForm.get('description').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-control nzSpan="18" nzPush="6">
-          <label nz-checkbox id="required" formControlName="required" nzDisabled>Required</label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-control nzSpan="18" nzPush="6">
-          <label nz-checkbox id="Emphasize" formControlName="emphasize" nzDisabled>Emphasize</label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-control nzSpan="18" nzPush="6">
-          <label nz-checkbox id="showInDiscoveryDocument" formControlName="showInDiscoveryDocument" nzDisabled>ShowInDiscoveryDocument</label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div class="operation">
-    <a (click)="edit()">
-      <i nz-icon type="edit" theme="twotone"></i>
-    </a>
-    <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete()">
-      <a nz-popconfirm>
-        <i nz-icon type="delete" theme="twotone" twoToneColor="#eb2f96"></i>
-      </a>
-    </nz-popconfirm>
-  </div>
-</form>
 
-<form [formGroup]="mainForm" (ngSubmit)="submit()" class="main-form" [style.display]="isEdit?'block':'none'">
-  <div nz-row>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
+    <div class="operation">
+      <a (click)="edit()">
+        <i nz-icon type="edit" theme="twotone"></i>
+      </a>
+      <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete()">
+        <a nz-popconfirm>
+          <i nz-icon type="delete" theme="twotone" twoToneColor="#eb2f96"></i>
+        </a>
+      </nz-popconfirm>
     </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="name" nzRequired>Name</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <input nz-input id="name" placeholder="Name" formControlName="name">
-          <nz-form-explain *ngIf="mainForm.get('name').dirty && mainForm.get('name').errors || mainForm.get('name').pending">
-            <ng-container *ngIf="mainForm.get('name').hasError('required')">
-              请输入Name
-            </ng-container>
-            <ng-container *ngIf="mainForm.get('name').hasError('uniqueApiScopeName')">
-              {{mainForm.get('name').value}} 已经存在
-            </ng-container>
-            <ng-container *ngIf="mainForm.get('name').pending">
-              验证中...
-            </ng-container>
-          </nz-form-explain>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="displayName">DisplayName</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <input nz-input id="displayName" placeholder="DisplayName" formControlName="displayName">
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <input nz-input id="description" placeholder="Description" formControlName="description">
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-control nzSpan="18" nzPush="6">
-          <label nz-checkbox id="required" formControlName="required" nzRequired>Required</label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-control nzSpan="18" nzPush="6">
-          <label nz-checkbox id="emphasize" formControlName="emphasize" nzRequired>Emphasize</label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-control nzSpan="18" nzPush="6">
-          <label nz-checkbox id="showInDiscoveryDocument" formControlName="showInDiscoveryDocument" nzRequired>ShowInDiscoveryDocument</label>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="6" formArrayName="userClaims" class="user-claims">
-      <nz-form-item nzFlex *ngFor="let userClaim of userClaims.controls; let i=index">
-        <nz-form-label nzSpan="6" nzFor="i">Type</nz-form-label>
-        <nz-form-control nzSpan="12">
-          <input nz-input placeholder="Type" [formControlName]="i">
-          <nz-form-explain *ngIf="userClaim.dirty && userClaim.errors">
-              <ng-container *ngIf="userClaim.hasError('required')">
-                请输入Type
-              </ng-container>             
+  </ng-container>
+  <ng-container *ngIf="isEdit">
+    <div nz-row>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="name" nzRequired>Name</nz-form-label>
+          <nz-form-control nzSpan="18" nzHasFeedback>
+            <input nz-input name="name" placeholder="Name" formControlName="name">
+            <nz-form-explain *ngIf="mainForm.get('name').dirty && mainForm.get('name').errors || mainForm.get('name').pending">
+              <ng-container *ngIf="mainForm.get('name').hasError('required')">
+                请输入Name
+              </ng-container>
+              <ng-container *ngIf="mainForm.get('name').hasError('uniqueApiScopeName')">
+                {{mainForm.get('name').value}} 已经存在
+              </ng-container>
+              <ng-container *ngIf="mainForm.get('name').pending">
+                验证中...
+              </ng-container>
             </nz-form-explain>
-        </nz-form-control>
-        <nz-form-control nzSpan="6">
-          <button nz-button type="button" nzType="dashed" (click)="deleteUserClaim(i)" >Delete</button>
-        </nz-form-control>
-      </nz-form-item>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="displayName">DisplayName</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <input nz-input name="displayName" placeholder="DisplayName" formControlName="displayName">
+          </nz-form-control>
+        </nz-form-item>
+      </div>
     </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="6">
-      <nz-form-item nzFlex>
-        <nz-form-control>
-          <div class="empty-subitem">
-            <button nz-button type="button" nzType="dashed" (click)="addUserClaim()">Add UserClaim</button>
+    <div nz-row>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <input nz-input name="description" placeholder="Description" formControlName="description">
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-control nzSpan="18" nzPush="6">
+            <label nz-checkbox name="required" formControlName="required" nzRequired>Required</label>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-control nzSpan="18" nzPush="6">
+            <label nz-checkbox name="emphasize" formControlName="emphasize" nzRequired>Emphasize</label>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-control nzSpan="18" nzPush="6">
+            <label nz-checkbox name="showInDiscoveryDocument" formControlName="showInDiscoveryDocument" nzRequired>ShowInDiscoveryDocument</label>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+    </div>
+    <ng-container formArrayName="userClaims">
+      <ng-container *ngFor="let claim of userClaims.controls; let i=index">
+        <ng-container [formGroup]="claim">
+          <div nz-row class="user-claims">
+            <div nz-col nzSpan="6">
+              <nz-form-item nzFlex>
+                <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
+                <nz-form-control nzSpan="18">
+                  <nz-form-text>{{claim.get('id').value}}</nz-form-text>
+                </nz-form-control>
+              </nz-form-item>
+            </div>
+            <div nz-col nzSpan="6">
+              <nz-form-item nzFlex>
+                <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
+                <nz-form-control nzSpan="18" nzHasFeedback>
+                  <input nz-input name="type" placeholder="Type" formControlName="type">
+                  <nz-form-explain *ngIf="claim.get('type').dirty && claim.get('type').errors">
+                    <ng-container *ngIf="claim.get('type').hasError('required')">
+                      请输入Type
+                    </ng-container>
+                  </nz-form-explain>
+                </nz-form-control>
+              </nz-form-item>
+            </div>
+            <div nz-col nzSpan="6">
+              <nz-form-item nzFlex>
+                <nz-form-control>
+                  <button nz-button type="button" nzType="dashed" (click)="deleteScopeClaim()">Delete</button>
+                </nz-form-control>
+              </nz-form-item>
+            </div>
           </div>
-        </nz-form-control>
-      </nz-form-item>
+        </ng-container>
+      </ng-container>
+    </ng-container>
+    <div nz-row>
+      <div nz-col nzSpan="6">
+        <nz-form-item nzFlex>
+          <nz-form-control>
+            <div class="empty-subitem">
+              <button nz-button type="button" nzType="dashed" (click)="addScopeClaim()">Add UserClaim</button>
+            </div>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
     </div>
-  </div>
-  <div class="operation">
-    <a (click)="submit()" [ngClass]="{'disabled': !mainForm.valid}">
-      <i nz-icon type="check-circle" theme="twotone"></i>
-    </a>
-    <a (click)="cancel()">
-      <i nz-icon type="close-circle" theme="twotone"></i>
-    </a>
-  </div>
+    <div class="operation">
+      <a (click)="submit()" [ngClass]="{'disabled': !mainForm.valid}">
+        <i nz-icon type="check-circle" theme="twotone"></i>
+      </a>
+      <a (click)="cancel()">
+        <i nz-icon type="close-circle" theme="twotone"></i>
+      </a>
+    </div>
+  </ng-container>
 </form>
