--- a/Demo4Angular/src/app/identity/api-resource/api-secret/api-secret.component.html
+++ b/Demo4Angular/src/app/identity/api-resource/api-secret/api-secret.component.html
@@ -1,138 +1,139 @@
-<form [formGroup]="mainForm" class="main-form" [style.display]="isEdit?'none':'block'">
+<form [formGroup]="mainForm" class="main-form">
   <nz-spin nzSize="small" [nzSpinning]="isSpinning"></nz-spin>
-  <div nz-row>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
+  <ng-container *ngIf="!isEdit">
+    <div nz-row>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="value" nzRequired>Value</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text> {{mainForm.get('value').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text> {{mainForm.get('type').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
     </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="value" nzRequired>Value</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text> {{mainForm.get('value').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
+    <div nz-row>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text> {{mainForm.get('description').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="expiration">Expiration</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text> {{mainForm.get('expiration').value | date:'yyyy-MM-dd HH:mm:ss'}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text>{{mainForm.get('created').value | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
     </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text> {{mainForm.get('type').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text> {{mainForm.get('description').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="expiration">Expiration</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text> {{mainForm.get('expiration').value | date:'yyyy-MM-dd HH:mm:ss'}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text>{{mainForm.get('created').value | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div class="operation">
-    <a (click)="edit()">
-      <i nz-icon type="edit" theme="twotone"></i>
-    </a>
-    <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete()">
-      <a nz-popconfirm>
-        <i nz-icon type="delete" theme="twotone" twoToneColor="#eb2f96"></i>
+    <div class="operation">
+      <a (click)="edit()">
+        <i nz-icon type="edit" theme="twotone"></i>
       </a>
-    </nz-popconfirm>
-  </div>
-</form>
-
-<form [formGroup]="mainForm" (ngSubmit)="submit()" class="main-form" [style.display]="isEdit?'block':'none'">
-  <div nz-row>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
+      <nz-popconfirm [nzTitle]="'确定删除?'" (nzOnConfirm)="delete()">
+        <a nz-popconfirm>
+          <i nz-icon type="delete" theme="twotone" twoToneColor="#eb2f96"></i>
+        </a>
+      </nz-popconfirm>
     </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="value" nzRequired>Value</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <input nz-input id="value" placeholder="Value" formControlName="value">
-          <nz-form-explain *ngIf="mainForm.get('value').dirty && mainForm.get('value').errors">
-            <ng-container *ngIf="mainForm.get('value').hasError('required')">
-              请输入Value
-            </ng-container>
-          </nz-form-explain>
-        </nz-form-control>
-      </nz-form-item>
+  </ng-container>
+  <ng-container *ngIf="isEdit">
+    <div nz-row>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzRequired>Id</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text>{{mainForm.get('id').value}}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="value" nzRequired>Value</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <input nz-input id="value" placeholder="Value" formControlName="value">
+            <nz-form-explain *ngIf="mainForm.get('value').dirty && mainForm.get('value').errors">
+              <ng-container *ngIf="mainForm.get('value').hasError('required')">
+                请输入Value
+              </ng-container>
+            </nz-form-explain>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <input nz-input id="type" placeholder="Type" formControlName="type">
+            <nz-form-explain *ngIf="mainForm.get('type').dirty && mainForm.get('type').errors">
+              <ng-container *ngIf="mainForm.get('type').hasError('required')">
+                请输入Type
+              </ng-container>
+            </nz-form-explain>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
     </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="type" nzRequired>Type</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <input nz-input id="type" placeholder="Type" formControlName="type">
-          <nz-form-explain *ngIf="mainForm.get('type').dirty && mainForm.get('type').errors">
-            <ng-container *ngIf="mainForm.get('type').hasError('required')">
-              请输入Type
-            </ng-container>
-          </nz-form-explain>
-        </nz-form-control>
-      </nz-form-item>
+    <div nz-row>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <input nz-input name="description" placeholder="Description" formControlName="description">
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="expiration">Expiration</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-date-picker name="expiration" formControlName="expiration" nzShowTime nzFormat="yyyy-MM-dd HH:mm:ss"></nz-date-picker>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+      <div nz-col nzSpan="8">
+        <nz-form-item nzFlex>
+          <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
+          <nz-form-control nzSpan="18">
+            <nz-form-text>{{mainForm.get('created')?.value | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
+          </nz-form-control>
+        </nz-form-item>
+      </div>
     </div>
-  </div>
-  <div nz-row>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="description">Description</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <input nz-input id="description" placeholder="Description" formControlName="description">
-        </nz-form-control>
-      </nz-form-item>
+    <div class="operation">
+      <a (click)="submit()" [ngClass]="{'disabled': !mainForm.valid}">
+        <i nz-icon type="check-circle" theme="twotone"></i>
+      </a>
+      <a (click)="cancel()">
+        <i nz-icon type="close-circle" theme="twotone"></i>
+      </a>
     </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="expiration">Expiration</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-date-picker id="expiration" formControlName="expiration" nzShowTime nzFormat="yyyy-MM-dd HH:mm:ss"></nz-date-picker>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-    <div nz-col nzSpan="8">
-      <nz-form-item nzFlex>
-        <nz-form-label nzSpan="6" nzFor="created" nzRequired>Created</nz-form-label>
-        <nz-form-control nzSpan="18">
-          <nz-form-text>{{mainForm.get('created')?.value | date:'yyyy-MM-dd HH:mm:ss' }}</nz-form-text>
-        </nz-form-control>
-      </nz-form-item>
-    </div>
-  </div>
-  <div class="operation">
-    <a (click)="submit()" [ngClass]="{'disabled': !mainForm.valid}">
-      <i nz-icon type="check-circle" theme="twotone"></i>
-    </a>
-    <a (click)="cancel()">
-      <i nz-icon type="close-circle" theme="twotone"></i>
-    </a>
-  </div>
+  </ng-container>
 </form>
