--- a/Demo4Angular/src/app/identity/api-resource/api-resource-detail.component.css
+++ b/Demo4Angular/src/app/identity/api-resource/api-resource-detail.component.css
@@ -20,6 +20,28 @@
   border: 1px solid #1890ff;
 }
 
+.sub-containner:hover .operation {
+  display: block;
+}
+
+.sub-containner .operation {
+  position: absolute;
+  top: 1px;
+  right: 4px;
+  display: none;
+}
+
+.sub-containner .operation a {
+  margin-right: 8px;
+  font-size: 16px;
+}
+
+.sub-containner .operation .disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.5
+}
+
 .new-item-containner {
   display: flex;
   justify-content: center;
@@ -51,4 +73,12 @@
 
 .operation .right>[nz-button] {
   margin-left: 8px;
+}
+
+.user-claims button{
+  margin-left:8px;
+}
+
+h3 {
+  color: #1890ff;
 }
