--- a/Demo4Angular/src/app/identity/api-resource/api-resource.component.html
+++ b/Demo4Angular/src/app/identity/api-resource/api-resource.component.html
@@ -32,13 +32,14 @@
   </nz-form-item>
   <nz-form-item class="add-new-container">
     <nz-form-control>
-      <a class="add-new" [routerLink]="['./','']">
+      <a class="add-new" [routerLink]="['./','']" [queryParams]="{pageIndex:paginatedresult.pageIndex,isEdit:true}">
         <i nz-icon type="plus-circle" theme="twotone" twoToneColor="#52c41a"></i>
       </a>
     </nz-form-control>
   </nz-form-item>
 </form>
-<nz-table #table [nzData]="paginatedresult.list" [nzLoading]="isSpinning" [nzFrontPagination]="false" [nzTotal]="paginatedresult.totalCount" [(nzPageIndex)]="paginatedresult.pageIndex" [(nzPageSize)]="paginatedresult.pageSize" (nzPageIndexChange)="search()">
+<nz-table #table [nzData]="paginatedresult.list" [nzLoading]="isSpinning" [nzFrontPagination]="false" [nzTotal]="paginatedresult.totalCount"
+  [(nzPageIndex)]="paginatedresult.pageIndex" [(nzPageSize)]="paginatedresult.pageSize" (nzPageIndexChange)="search()">
   <thead (nzSortChange)="sort($event)" nzSingleSort>
     <tr>
       <th nzWidth="80px">序号</th>
@@ -68,7 +69,7 @@
       <td>{{(paginatedresult.pageIndex-1)*paginatedresult.pageSize+i+1}}</td>
       <td>{{item.id}}</td>
       <td [nzShowCheckbox]="true" [nzDisabled]="true" [nzChecked]="item.enabled"></td>
-      <td>{{item.name}}</td>
+      <td><a [routerLink]="[item.id]" [queryParams]="{ pageIndex:paginatedresult.pageIndex}">{{item.name}}</a></td>
       <td>{{item.displayName}}</td>
       <td>{{item.description}}</td>
       <td>{{item.created}}</td>
@@ -79,7 +80,7 @@
         <!-- <a [routerLink]="['../ApiResources',item.id]">
           <i nz-icon type="edit" theme="twotone"></i>
         </a> -->
-        <a (click)="navigate(item.id)">
+        <a (click)="edit(item.id)">
           <i nz-icon type="edit" theme="twotone"></i>
         </a>
         <a (click)="delete(item.id)">
