--- a/Demo4Angular/src/app/identity/api-resource/api-resource-detail.component.html
+++ b/Demo4Angular/src/app/identity/api-resource/api-resource-detail.component.html
@@ -401,7 +401,7 @@
       </div>
     </ng-container>
     <div class="new-item-containner">
-      <button nz-button type="button" nzType="dashed" (click)="addApiScret()">
+      <button nz-button type="button" nzType="dashed" (click)="addApiScret(mainForm)">
         Add ApiSecret
       </button>
     </div>
@@ -535,7 +535,7 @@
       </div>
     </ng-container>
     <div class="new-item-containner">
-      <button nz-button type="button" nzType="dashed" (click)="addApiScope()">
+      <button nz-button type="button" nzType="dashed" (click)="addApiScope(mainForm)">
         Add ApiScope
       </button>
     </div>
